# noir_backend_using_gnark

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  feature.yml
.github/workflows/: ci.yaml  tests  tests.yaml
ffi/: Cargo.toml  Makefile  README.md  build.rs  main.go
ffi/ping/: libping.h  main.go
ffi/src/: main.rs
gnark_backend/: go.mod  go.sum
gnark_backend/cmd/wasm/: main.go
gnark_backend_ffi/: .gitignore  go.mod  go.sum  main.go  tests.go
gnark_backend_ffi/acir/: acir.go  acir_test.go
gnark_backend_ffi/acir/opcode/: arithmetic_opcode.go  arithmetic_opcode_test.go  black_box_function_call_opcode.go  directive_opcode.go  opcode.go  test_helpers.go
gnark_backend_ffi/backend/: add_term.go  add_term_test.go  common.go  helpers.go  mul_term.go  mul_term_test.go  test_helpers.go
gnark_backend_ffi/internal/: common.go
gnark_backend_ffi/structs/: add_term.go  add_term_test.go  helpers.go  mul_term.go  mul_term_test.go  raw_gate.go  raw_gate_test.go  raw_r1cs.go  raw_r1cs_test.go  test_helpers.go
gnark_backend_wasm/: go.mod  go.sum  go.work.sum
gnark_backend_wasm/assets/: index.html
gnark_backend_wasm/cmd/wasm/: main.go
src/: acvm_interop.rs  backend.rs  lib.rs
src/acvm/: mod.rs
src/acvm_interop/: mod.rs  proof_system.rs  pwg.rs  smart_contract.rs
src/gnark_backend_glue/: acir_to_r1cs.rs  errors.rs  helpers.rs  mod.rs  serialize.rs
src/gnark_backend_wrapper/: acir_to_r1cs.rs  errors.rs  mod.rs  serialize.rs
tests/: serialization_tests.rs  tests.rs
(+83 files in other folders)
